# crab-boy

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
src/: cpu.rs  gui.rs  main.rs  memory.rs  ppu.rs
